### The Program Manager Eternity What's Up File

2021-08-15

    Added U keyboard option to QScroll to toggle Smooth upward scrolling.
    Added S keyboard option to TIME Screen Saver to change display scale.
    Added support to uninstall using FreeDOS package managers.
    Changed installer to use QResFile binrary resources.
    Add Support to UPX compress binaries in build process.
    New QResFile, developer oriented executable resource management utility. It
        replaces the clunky ADD2INS program used in the build process.
    Support to autohide menus without any visible programs.
    Automatic language/font/theme/keymap switching in QCrt based apps (PGME,
        EFontDesigner and Installer) when defaults are empty.
    New Clock, Conway and Static screen savers.
    Removed Extra spacing in alternate language help text
    Added support to scroll to item in unsorted lists (for the dropdowns)
    Improved startup message (beginning/resuming/updating) display and duration
    Watch for Package (Un)Installs under FreeDOS, improved Auto-Hide.
    Installer ignore drive Z: under DOSBox.
    Auto disable QSCROLL smooth scrolling in common non-DOSBox Virtual Machines
    Added ability to auto-hide uninstalled/missing programs.
    Ignore CPUCache setting in DOSBOX.
    Added suport to use CPUCACHE to disable/enable CPU caching for old games.
    Added CPU Idle/power saving option to Config Dialog.
    Added "<none>" option to Config and Display Dialogs for File based options.
    Fix display options only save when theme was changed bug.
    Mouse flicker reduced some.
    Added Config Dialog option to turn sound on/off
    Added config file option to save power, CPU_IDLE=ANY, APM, HALT or NONE
    Added wait on return for individual programs, WAIT=OFF, FOREVER, DEFAULT
        or time in seconds.
    Added wait on return default per menu global WAIT=OFF, FOREVER or seconds.
    Assigned Edit Menu popup tp EditItem Command (default Alt+E).